developer/src/kmc-kmn/test/fixtures/invalid-keyboards/warn_virtual_key_in_output.kmn
store(&NAME) 'WARN_VirtualKeyInOutput'
store(&VERSION) '9.0'

begin Unicode > use(main)

group(main) using keys

c WARN_VirtualKeyInOutput
+ 'a' > [K_BKQUOTE]
